Fixed spacing between sections

--- a/src/App.css
+++ b/src/App.css
@@ -474,6 +474,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
   background-color: white;
   padding: 20px;
+  padding-top: 0px;
+  margin-top: -30px;
 }
 
 .map h1 {
